[package]
name = "smite-ir"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
smite = { path = "../smite" }
rand.workspace = true
serde.workspace = true
postcard.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
