[package]
name = "smite"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
nyx = ["dep:smite-nyx-sys"]

[lints]
workspace = true

[dependencies]
log = "0.4"
simple_logger = { version = "5", default-features = false }

smite-nyx-sys = { path = "../smite-nyx-sys", optional = true }
